--- a/client/app/new_poll/new_poll.jade
+++ b/client/app/new_poll/new_poll.jade
@@ -1,7 +1,7 @@
 div(ng-include='"components/navbar/navbar.html"')
 
 .container
-  div(ng-controller='NewPollCtrl')
+  div
     h1(editable-text='poll.name') {{ poll.name || 'Poll name'}}
     ul(ng-repeat='q in poll.questions track by $index')
       li(ng-controller='NewQuestionCtrl')
@@ -20,6 +20,6 @@ div(ng-include='"components/navbar/navbar.html"')
         span(editable-text='new_question.value.question'
           onbeforesave='validate_new_question($data)'
           onaftersave='push_question(poll.questions)') {{ new_question.value.question || 'New question'}}
-    button.btn.btn-primary(ng-controller='SubmitPollCtrl' ng-click='submitPoll(poll)') {{ buttonText }}
+    button.btn.btn-primary(ng-controller='SubmitPollCtrl' ng-click='save()') {{ buttonText }}
 .footer
   | Foo bar
