--- a/client/app/polls/polls.jade
+++ b/client/app/polls/polls.jade
@@ -13,6 +13,8 @@ div(ng-include='"components/navbar/navbar.html"')
               |  
               i.fa.fa-caret-down(ng-hide='reveal')
               i.fa.fa-caret-up(ng-show='reveal')
+              |  
+              i.fa.fa-edit(ng-click='editPoll(poll._id)')
         md-content(ng-show='reveal')
           ul(ng-repeat='question in poll.questions')
             li {{ question.question }}
