--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -23,5 +23,6 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'main/main.scss';
 @import 'new_poll/new_poll.scss';
 @import 'polls/polls.scss';
+@import 'view_answers/view_answers.scss';
 @import 'modal/modal.scss';
 // endinjector
