--- a/client/app/view_answers/view_answers.jade
+++ b/client/app/view_answers/view_answers.jade
@@ -1,2 +1,19 @@
-.col-md-12
-    | This is the view_answers view.
+div(ng-include='"components/navbar/navbar.html"')
+
+.container
+  .row
+    h2 {{ poll.name }}
+    div(ng-hide='submitted')
+      h3 {{ currentQuestion.question }}
+      form(name='answerForm' novalidate)
+        p
+          div(ng-repeat='answer in currentQuestion.answers') 
+            label
+              input(type="radio" ng-model='answers[questionNumber]' ng-value='$index')
+              |  {{ answer }}
+      .btn-group
+        button.btn.btn-primary(ng-click='nextQuestion()' ng-disabled='questionNumber === lastQuestion || answers[questionNumber] === undefined') Next question
+        button.btn.btn-primary(ng-click='saveAnswers()' ng-disabled='questionNumber < lastQuestion || answers[questionNumber] === undefined || submitted') {{ saveButton }}
+    p.lead(ng-show='submitted') Your answers have been saved!
+.footer
+  | Foo bar
