Change view poll layout

--- a/client/app/admin/admin.scss
+++ b/client/app/admin/admin.scss
@@ -1,1 +1,4 @@
 .trash { color:rgb(209, 91, 71); }
+.regular { color: rgb(91, 71, 209); }
+.correct { color: rgb(91, 209, 71); }
+.button-icon { padding-right: 5px; }
