--- a/client/app/polls/polls.jade
+++ b/client/app/polls/polls.jade
@@ -7,7 +7,7 @@ div(ng-include='"components/navbar/navbar.html"')
   poll
     ul.list-group
       li.list-group-item(ng-repeat='poll in polls track by $index')
-        strong {{ poll.name }}
+        strong(ng-bind-html='poll.name')
         a.button-icon
           span.glyphicon.glyphicon-menu-down(ng-if='!reveal')
           span.glyphicon.glyphicon-menu-up(ng-if='reveal')
@@ -22,8 +22,10 @@ div(ng-include='"components/navbar/navbar.html"')
             span.glyphicon.glyphicon-trash
             
         ul(ng-show='reveal')
-          li(ng-repeat='question in poll.questions track by $index') {{ question.question }}
+          li(ng-repeat='question in poll.questions track by $index')
+            span(ng-bind-html='question.question')
             ol
-              li(ng-repeat='answer in question.answers track by $index' ng-class='{correct: $index===question.answer}') {{ answer }}
+              li(ng-repeat='answer in question.answers track by $index' ng-class='{correct: $index===question.answer}')
+                span(ng-bind-html='answer')
 .footer
   | Foo bar
