--- a/client/app/new_poll/new_poll.jade
+++ b/client/app/new_poll/new_poll.jade
@@ -2,21 +2,25 @@ div(ng-include='"components/navbar/navbar.html"')
 
 .container
   div(ng-model='poll')
+    p(translate) To edit the poll, click on the field to edit and type your text. To format the text, select it and pick the desired format in the floating box.
     h1(inline-text-editor contenteditable="true" ng-model='poll.name')
+    md-button.md-button-icon(ng-click='addQuestion()')
+      span.glyphicon.glyphicon-plus(translate) Add question
+      
     md-card(ng-repeat='q in poll.questions track by $index')
       md-card-title
         md-card-title-text
-          span.md-headline Question n°{{$index}}
+          span.md-headline(translate) Question n°{{$index}}
       md-card-actions
-        md-button.md-button-icon(ng-click='addAnswer(q)')
-          span.glyphicon.glyphicon-plus
-          | Add answer
-        md-button.md-button-icon(ng-click='move($index, -1)')
-          span.glyphicon.glyphicon-chevron-up
-          | Move up
-        md-button.md-button-icon(ng-click='move($index, 1)')
-          span.glyphicon.glyphicon-chevron-down
-          | Move down
+        div(layout='row')
+          div(flex)
+            md-button.md-button-icon(ng-click='addAnswer(q)')
+              span.glyphicon.glyphicon-plus(translate) Add answer
+          div.align-right(flex)
+            md-button.md-button-icon(ng-click='move($index, -1)')
+              span.glyphicon.glyphicon-chevron-up(translate) Move up
+            md-button.md-button-icon(ng-click='move($index, 1)')
+              span.glyphicon.glyphicon-chevron-down(translate) Move down
       md-card-content
         p(inline-text-editor contenteditable="true" ng-model='q.question')
         div(ng-repeat='answer in q.answers track by $index' layout='row' layout-wrap)
@@ -24,12 +28,12 @@ div(ng-include='"components/navbar/navbar.html"')
             input(type="radio" ng-model='q.answer' ng-value='$index')
             span.inline(inline-text-editor contenteditable="true" ng-model='q.answers[$index]')
             .pull-right
-              a.button-icon(ng-click='moveAnswer(q, $index, -1)' aria-label='move answer up')
+              a.button-icon(ng-click='moveAnswer(q, $index, -1)' aria-label='{{"Move answer up"|translate}}')
                 span.glyphicon.glyphicon-chevron-up
-              a.button-icon(ng-click='moveAnswer(q, $index, 1)' aria-label='move answer down')
+              a.button-icon(ng-click='moveAnswer(q, $index, 1)' aria-label='{{"Move answer down"|translate}}')
                 span.glyphicon.glyphicon-chevron-down
-              a.button-icon.trash(ng-click='deleteAnswer(q, $index)' aria-label='delete answer')
+              a.button-icon.trash(ng-click='deleteAnswer(q, $index)' aria-label='{{"Delete answer"|translate}}')
                 span.glyphicon.glyphicon-trash
-    button.btn.btn-primary(ng-controller='SubmitPollCtrl' ng-click='save()') {{ buttonText }}
-.footer
+    button.btn.btn-primary(ng-controller='SubmitPollCtrl' ng-click='save()' translate) Submit poll
+.footer(translate)
   | Foo bar
