--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -19,29 +19,19 @@ div(ng-include='"components/navbar/navbar.html"')
     .col-sm-12
       form.form(name='form', ng-submit='login(form)', novalidate='')
         .form-group
-          label Email
+          label(translate) Email
           input.form-control(type='text', name='email', ng-model='user.email')
         .form-group
-          label Password
+          label(translate) Password
           input.form-control(type='password', name='password', ng-model='user.password')
 
         .form-group.has-error
           p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
-            | Please enter your email and password.
+            span(translate) Please enter your email and password.
           p.help-block {{ errors.other }}
 
         div
           button.btn.btn-inverse.btn-lg.btn-login(type='submit')
-            | Login
-          = ' '
-          a.btn.btn-default.btn-lg.btn-register(href='/signup')
-            | Register
+            span(translate) Login
 
-        hr
-
-        div
-          a.btn.btn-google-plus(href='', ng-click='loginOauth("google")')
-            i.fa.fa-google-plus
-            |  Connect with Google+
-          = ' '
-  hr
+div(ng-include='"components/footer/footer.html"')
