move to new files

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -20,8 +20,8 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
 @import 'answer_poll/answer_poll.scss';
+@import 'edit_poll/edit_poll.scss';
 @import 'main/main.scss';
-@import 'new_poll/new_poll.scss';
 @import 'polls/polls.scss';
 @import 'upload/upload.scss';
 @import 'view_answers/view_answers.scss';
